# CryptoVault

./: .gitignore  CMakeLists.txt  README.md
Docs/: mac-paths
development/: deploy.sh
development/CryptoVault.app/Contents/Frameworks/: libQt-Secret.1.3.1.dylib  libQt-Secret.dylib  libQtBigint.6.1.2.dylib
development/CryptoVault.app/Contents/MacOS/: CryptoVault
development/CryptoVault.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
development/CryptoVault.app/Contents/PlugIns/imageformats/: libqgif.dylib  libqicns.dylib  libqico.dylib  libqjpeg.dylib  libqmacheif.dylib  libqmacjp2.dylib  libqtga.dylib  libqtiff.dylib  libqwbmp.dylib  libqwebp.dylib
development/CryptoVault.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
development/CryptoVault.app/Contents/PlugIns/printsupport/: libcocoaprintersupport.dylib
development/CryptoVault.app/Contents/PlugIns/styles/: libqmacstyle.dylib
development/CryptoVault.app/Contents/PlugIns/virtualkeyboard/: libqtvirtualkeyboard_hangul.dylib  libqtvirtualkeyboard_openwnn.dylib  libqtvirtualkeyboard_pinyin.dylib  libqtvirtualkeyboard_tcime.dylib  libqtvirtualkeyboard_thai.dylib
development/build-scripts/: debian_linux_install.sh  linux-depencies.sh  linux-deps.sh  linux-install.sh  pacmans
development/mac-build-and-deploy/: build.sh  deploy.sh  paths.sh
libs/Qt-Secret/: CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Makefile  Qt-Secret.pro  README.md  cmake_install.cmake  doxygen.conf  test.pri
libs/Qt-Secret/Doc/: QtCreator.md
libs/Qt-Secret/Qt-Secret-GUI/: CMakeLists.txt  DigitalSignaturePage.qml  EncryptDecryptPage.qml  KeysGeneratePage.qml  Makefile  Qt-Secret-GUI  Qt-Secret-GUI.pro  appcore.cpp  appcore.h  cmake_install.cmake  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  secretworker.cpp  secretworker.h
libs/Qt-Secret/Qt-Secret-GUI/Qt-Secret-GUI_autogen/: moc_predefs.h  mocs_compilation.cpp
libs/Qt-Secret/Qt-Secret-GUI/Qt-Secret-GUI_autogen/EWIEGA46WW/: moc_appcore.cpp  moc_appcore.cpp.d  moc_secretworker.cpp  moc_secretworker.cpp.d  qrc_qml.cpp
libs/Qt-Secret/Qt-Secret-GUI/modules/: ActionButton.qml  DoubleStateMenu.qml  LabledText.qml  LoadPopup.qml  RowElement.qml  RsaGenModule.qml
libs/Qt-Secret/src/: CMakeLists.txt  Makefile  Qt-Secret.pri  Qt-Secret.pro  cmake_install.cmake  qtsecret_global.h
libs/Qt-Secret/src/Qt-AES/: .gitignore  CONTRIBUTING.md  README.md  ccache.pri  main.cpp  qaesencryption.h  qaesencryption.pro  res.qrc
libs/Qt-Secret/src/Qt-AES/aesni/: aesni-enc-cbc.h  aesni-enc-ecb.h
libs/Qt-Secret/src/Qt-AES/unit_test/: aestest.cpp  aestest.h  longText.txt
libs/Qt-Secret/src/Qt-RSA/: qrsaencryption.cpp  qrsaencryption.h
libs/Qt-Secret/src/Qt-Secret_autogen/: moc_predefs.h  mocs_compilation.cpp
libs/Qt-Secret/src/Qt-Secret_autogen/3Q7KYC43GU/: moc_qaesencryption.cpp  moc_qaesencryption.cpp.d
libs/Qt-Secret/src/mini-gmp/: .gitignore  .gitmodules  CMakeLists.txt  GMP.pri  GMP.pro  README.md  doxygen.conf
libs/Qt-Secret/src/mini-gmp/CMake/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ProjectOut.cmake  QtUtils.cmake  QuasarApp.cmake  QuasarAppCITargets.cmake  README.md  Version.cmake  ccache.cmake  doxygen.conf  plug.pro
libs/Qt-Secret/src/mini-gmp/CMake/Docs/: QtUtils.md  QuasarApp.md  QuasarAppCITargets.md  ccache.md  crossplatform.md
libs/Qt-Secret/src/mini-gmp/CMake/DoxyStyle/: DoxygenLayout.xml  LICENSE  README.md  doxygenStyles.css
libs/Qt-Secret/src/mini-gmp/CMake/QtStaticCMake/: CMakeLists.txt  LICENSE.md  QtStaticCMake.cmake  README.md
libs/Qt-Secret/src/mini-gmp/CMake/crossplatform/: crossplatform.cmake
libs/Qt-Secret/src/mini-gmp/CMake/qt-android-cmake/: AddQtAndroidApk.cmake  AndroidManifest.xml.in  (+5 more)
libs/Qt-Secret/src/mini-gmp/src/: CMakeLists.txt  GMP.pri  GMP.pro  GMPIncudePah.pri  bigint.cpp  bigint.h  ccache.pri  mini-gmp.c  mini-gmp.h  minigmp_global.h
libs/Qt-Secret/src/mini-gmp/tests/: CMakeLists.txt  QtBigintTest  test.pri  tests.pro  tst_arithmetictests.cpp
libs/Qt-Secret/tests/: CMakeLists.txt  Makefile  Qt-SecretTest.pro  Qt-SecretTest_AES  Qt-SecretTest_RSA  cmake_install.cmake  main.cpp
libs/Qt-Secret/tests/Qt-SecretTest_AES_autogen/: moc_predefs.h  mocs_compilation.cpp
libs/Qt-Secret/tests/Qt-SecretTest_AES_autogen/AUGGQPKL4Y/: qrc_res.cpp
libs/Qt-Secret/tests/Qt-SecretTest_AES_autogen/FDXCPRW2FB/: moc_aestest.cpp  moc_aestest.cpp.d
libs/Qt-Secret/tests/Qt-SecretTest_RSA_autogen/: moc_predefs.h
libs/nlohmann/: byte_container_with_subtype.hpp  json.hpp
libs/nlohmann/detail/: hash.hpp
libs/nlohmann/detail/meta/: type_traits.hpp
libs/nlohmann/detail/output/: binary_writer.hpp
src/: main.cpp
src/AccountCreation/: AccountCreation.cpp  AccountCreation.h  InitialScreenLogo.qrc  accountCreation.ui  ui_accountCreation.h
src/CredentialMenu/: .CredentialMenu.cpp.swp  CredentialMenu.cpp  CredentialMenu.h  CredentialMenu.ui  files.qrc  ui_CredentialMenu.h
src/CrossPlatform/: CrossPlatform.cpp  CrossPlatform.h
src/Crypto/: Crypto.cpp  Crypto.h
src/ExportCredentialsLoginChange/: ExportCredentialsLoginChange.ui  ExportLoginChange.cpp  ExportLoginChange.h  ui_ExportCredentialsLoginChange.h
src/Global/: ChangeGlobals.h  Global.h
src/Initial_Start_Menu/: initial.qrc  startScreen.cpp  startScreen.h  startScreen.ui  ui_startScreen.h
src/JSON/: SaveJson.cpp  SaveJson.h
src/Login/: login.cpp  login.h  login.ui  ui_login.h
src/PassGenerator/: .PasswordGenerator.cpp.swp  PassGen.ui  PasswordGenerator.cpp  PasswordGenerator.h  PasswordGenerator.ui  ui_PassGen.h
src/Settings/: Settings.cpp  Settings.h  Settings.ui  ui_Settings.h
src/authorization/: authorization.cpp  authorization.h  authorization.ui  ui_authorization.h
unit-testing/export-selected/: credentials.json
unit-testing/import/: credentials.json
unit-testing/initial-credentials/: credentials.json
(+32 files in other folders)
